# lyri

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
backend/: Cargo.toml
backend/src/: get_lyrics.rs  lib.rs  models.rs
backend/src/lyrics/: get_lyrics.rs  mod.rs  models.rs
backend/src/platform_song_interface/: mod.rs  mpris.rs
backend/src/song_info_retrieval/: mod.rs  mpris.rs
frontend/src/: main.rs
gtk_frontend/: Cargo.toml  build.rs
gtk_frontend/src/: buttons.rs  main.rs
gtk_frontend/src/resources/: resources.gresources.xml  window.ui
iced_frontend/: Cargo.toml
src/: main.rs  media_interface.rs
terminal_frontend/: Cargo.toml
terminal_frontend/src/: main.rs
