[package]
name = "lyri"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
dirs = "6.0.0"
genius_lyrics = "1.0.4"
iced = { version = "0.13.1", features = ["image", "tokio"] }
megamind = "0.13.0"
mpris = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
