[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
genius_lyrics = "1.0.4"
http = "1.3.1"
lrclib-api-rs = "0.3.1"
megamind = "0.13.0"
mpris = "2.0.1"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = "1.45.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
log = "0.4.27"
